# autora-experimentalist-challenge-Avengers

./: LICENSE  README.md  mkdocs.yml  pyproject.toml
challenge/: experimentalist_benchmarking.ipynb
docs/: Additional Example.ipynb  Basic Usage.ipynb  index.md  quickstart.md
src/autora/experimentalist/autora_experimentalist_example/: __init__.py
tests/: test_autora_experimentalist.py  test_autora_experimentalist_example.py
