[project]
# UPDATE THIS BEFORE PUBLISHING
name = "autora_experimentalist_example"
description = "This is the experimentalist of the Avengers group."
authors = [
    { name = "Hannes Voß", email = "hannes.voss95@gmail.com" },
    { name = "Partha Pratim Kalita", email = "parthakalita142@gmail.com" },
]
dynamic = ["version"]

readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8,<4"

# ADD NEW DEPENDENCIES HERE
dependencies = [
    "autora",
    "scikit-learn",
    "autora-theorist-bms",
    "autora[all-experimentalists]",
    "matplotlib",
    "dataclasses",
    "typing",
    "pytest",
]

[project.optional-dependencies]
dev = [
    "autora-core[dev]"
]

test = [
    "pytest",
    "hypothesis"
]

[project.urls]
homepage = "http://www.empiricalresearch.ai"
repository = "https://github.com/musslick/autora-experimentalist-challenge"
documentation = "https://autoresearch.github.io/autora/"


[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
